Add navigation bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,8 +46,46 @@
         <img src="./assets/icon-dashboard.svg" alt="Dashboard icon" class="nav-icon">
         <span class="nav-text">Dashboard</span>
       </div>
-      <div class="nav__item"></div>
-      <div class="nav__lower"></div>
+      <div class="nav__item">
+        <div class="nav__item--container">
+          <img src="./assets/icon-home.svg" alt="Home icon">
+          <span class="nav__item--text">Home</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-user-profile.svg" alt="User profile icon">
+          <span class="nav__item--text">Profile</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-messages.svg" alt="Messages icon">
+          <span class="nav__item--text">Messages</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-history.svg" alt="History icon">
+          <span class="nav__item--text">History</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-task.svg" alt="Task icon">
+          <span class="nav__item--text">Task</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-community.svg" alt="Communities icon">
+          <span class="nav__item--text">Communities</span>
+        </div>
+      </div>
+      <div class="nav__lower">
+        <div class="nav__item--container">
+          <img src="./assets/icon-settings.svg" alt="Settings icon">
+          <span class="nav__item--text">Settings</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-support.svg" alt="Help center icon">
+          <span class="nav__item--text">Support</span>
+        </div>
+        <div class="nav__item--container">
+          <img src="./assets/icon-security.svg" alt="Security icon">
+          <span class="nav__item--text">Security</span>
+        </div>
+      </div>
     </nav>
     <main class="main">
       <div class="main__projects"></div>
