Add project section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,79 @@
       </div>
     </nav>
     <main class="main">
-      <div class="main__projects"></div>
-      <aside class="main__announcements"></aside>
-      <aside class="main__trending"></aside>
+      <div class="main__projects">
+        <h3 class="main__projects--header">Your Projects</h3>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+        <div class="main__projects--item">
+          <div class="main__projects--item-text">
+            <h4 class="main__projects--item-header">Super Cool Project</h4>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+          </div>
+          <div class="main__projects--item-icons">
+            <img src="./assets/icon-heart.svg" alt="Heart icon">
+            <img src="./assets/icon-watch.svg" alt="Watch icon">
+            <img src="./assets/icon-github.svg" alt="Github icon">
+          </div>
+        </div>
+      </div>
+      <aside class="main__aside-container">
+        <aside class="main__announcements"></aside>
+        <aside class="main__trending"></aside>
+      </aside>
     </main>
   </div>
 </body>
