Add announcement section

--- a/index.html
+++ b/index.html
@@ -157,11 +157,27 @@
           </div>
         </div>
       </div>
-      <aside class="main__aside-container">
-        <aside class="main__announcements"></aside>
-        <aside class="main__trending"></aside>
-      </aside>
-    </main>
+      <aside class="main__aside--container">
+        <h3 class="main__announcements--heading">Announcements</h3>
+        <aside class="main__announcements">
+          <div class="main__announcements--container">
+            <div class="main__announcements--container-item">
+              <span class="main__announcements--item-heading">Site Maintenance</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa iste enim velit quas modi maxime!</p>
+            </div>
+            <div class="main__announcements--container-item">
+              <span class="main__announcements--item-heading">Community Share Day</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa iste enim velit quas modi maxime!</p>
+            </div>
+            <d /admin-dashboard/images/svg-chart.svgiv class="main__announcements--container-item">
+              <span class="main__announcements--item-heading">Updated Privacy Policy</span>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa iste enim velit quas modi maxime!</p>
+          </div>
+  </div>
+  </aside>
+  <aside class="main__trending"></aside>
+  </aside>
+  </main>
   </div>
 </body>
 
