Add trending section

--- a/index.html
+++ b/index.html
@@ -173,11 +173,42 @@
               <span class="main__announcements--item-heading">Updated Privacy Policy</span>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa iste enim velit quas modi maxime!</p>
           </div>
-  </div>
-  </aside>
-  <aside class="main__trending"></aside>
-  </aside>
-  </main>
+        </aside>
+        <h3 class="main__trending--heading">Trending</h3>
+        <aside class="main__trending">
+          <div class="main__trending--container">
+            <div class="main__trending--user">
+              <img src="./assets/icon-trending-1.svg" alt="User icon">
+              <div class="main__trending--textbox">
+                <span class="user-name">@tegan</span>
+                <p>World Peace Builder</p>
+              </div>
+            </div>
+            <div class="main__trending--user">
+              <img src="./assets/icon-trending-2.svg" alt="User icon">
+              <div class="main__trending--textbox">
+                <span class="user-name">@morgan</span>
+                <p>Super Cool Project</p>
+              </div>
+            </div>
+            <div class="main__trending--user">
+              <img src="./assets/icon-trending-3.svg" alt="User icon">
+              <div class="main__trending--textbox">
+                <span class="user-name">@kendall</span>
+                <p>Life Changing App</p>
+              </div>
+            </div>
+            <div class="main__trending--user">
+              <img src="./assets/icon-trending-4.svg" alt="User icon">
+              <div class="main__trending--textbox">
+                <span class="user-name">@alex</span>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </aside>
+    </main>
   </div>
 </body>
 
