--- a/index.html
+++ b/index.html
@@ -92,68 +92,88 @@
         <h3 class="main__projects--header">Your Projects</h3>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Calculator App</h4>
+            <p>This is a simple calculator app that allows users to perform basic mathematical operations such as
+              addition, subtraction, multiplication, division, and modulo.</p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+            <a href="https://taewookim02.github.io/calculator/" target="_blank">
+              <img src="./assets/icon-watch.svg" alt="Watch icon" class="link-icons">
+            </a>
+            <a href="https://github.com/taewookim02/calculator" target="_blank">
+              <img src="./assets/icon-github.svg" alt="Github icon" class="link-icons">
+            </a>
           </div>
         </div>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Sign-up Page</h4>
+            <p>This is a simple sign-up page for a fictional online service. It includes a form for users to enter their
+              personal information and create an account.</p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+
+            <a href="https://taewookim02.github.io/signup-page/" target="_blank"><img src="./assets/icon-watch.svg"
+                alt="Watch icon"></a>
+            <a href="https://github.com/taewookim02/signup-page" target="_blank"><img src="./assets/icon-github.svg"
+                alt="Github icon"></a>
           </div>
         </div>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Etch-a-Sketch</h4>
+            <p>The objective of creating this app was to get used to DOM manipulation and adding some basic UI by using
+              html, css, and js.</p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+
+            <a href="https://taewookim02.github.io/etch-a-sketch/" target="_blank"><img src="./assets/icon-watch.svg"
+                alt="Watch icon"></a>
+            <a href="https://github.com/taewookim02/etch-a-sketch" target="_blank"><img src="./assets/icon-github.svg"
+                alt="Github icon"></a>
           </div>
         </div>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Rock Paper Scissors</h4>
+            <p>The objective was to get used to DOM manipulation and adding some basic UI by using html, css, and js.
+            </p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+            <a href="https://taewookim02.github.io/rock-paper-scissors/" target="_blank"><img
+                src="./assets/icon-watch.svg" alt="Watch icon"></a>
+            <a href="https://github.com/taewookim02/rock-paper-scissors" target="_blank"><img
+                src="./assets/icon-github.svg" alt="Github icon"></a>
           </div>
         </div>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Hangman</h4>
+            <p>The objective of creating this app was to get used to DOM manipulation and adding some basic UI by using
+              html, css, and js. Making the hangman logic as well as usage of canvas api was a good learning experience.
+            </p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+            <a href="https://hangman-taewoo.netlify.app/" target="_blank"><img src="./assets/icon-watch.svg"
+                alt="Watch icon"></a>
+            <a href="https://github.com/taewookim02/hangman" target="_blank"><img src="./assets/icon-github.svg"
+                alt="Github icon"></a>
           </div>
         </div>
         <div class="main__projects--item">
           <div class="main__projects--item-text">
-            <h4 class="main__projects--item-header">Super Cool Project</h4>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, odio?</p>
+            <h4 class="main__projects--item-header">Book-binding Workshop</h4>
+            <p>This project serves 2 purposes<br>
+
+              - Practicing Figma & Sass<br>
+              - Handover for a part-time job I had
+            </p>
           </div>
           <div class="main__projects--item-icons">
-            <img src="./assets/icon-heart.svg" alt="Heart icon">
-            <img src="./assets/icon-watch.svg" alt="Watch icon">
-            <img src="./assets/icon-github.svg" alt="Github icon">
+            <a href="https://bookbinding-taewoo.netlify.app/" target="_blank"><img src="./assets/icon-watch.svg"
+                alt="Watch icon"></a>
+            <a href="https://github.com/taewookim02/bookbinding-workshop" target="_blank"><img
+                src="./assets/icon-github.svg" alt="Github icon"></a>
           </div>
         </div>
       </div>
